account-data/Reishi-Narisada/eu-west-2/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-fd9c5796",
                    "NetworkAclId": "acl-dde884b4",
                    "SubnetId": "subnet-a53af2cc"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-89b441e1",
                    "NetworkAclId": "acl-dde884b4",
                    "SubnetId": "subnet-103bb16b"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-8ab441e2",
                    "NetworkAclId": "acl-dde884b4",
                    "SubnetId": "subnet-05c06048"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-dde884b4",
            "OwnerId": "416817624313",
            "Tags": [],
            "VpcId": "vpc-1eba2077"
        }
    ]
}
